# codec2

./: CMakeLists.txt  zephyr.cmake
src/: ch.c  codec2.c  codec2.h  codec2_fft.c  cohpsk.c  cohpsk_demod.c  debug_alloc.h  fdmdv.c  fdmdv_demod.c  filter.c  freedv_1600.c  freedv_700.c  freedv_api.c  freedv_fsk.c  mbest.c  mpdecode_core.c  newamp1.c  nlp.c  ofdm.c  sine.c  varicode.c
src/codebook/: codes_450.txt  dlsp2.txt  dlsp6.txt  gecb.txt  lsp1.txt  lsp10.txt  lsp2.txt  lsp3.txt  lsp4.txt  lsp5.txt  lsp6.txt  lsp7.txt  lsp8.txt  lsp8910.txt  lsp9.txt  lspjmv1.txt  lspjmv2.txt  lspjmv3.txt  lspvqexp1.txt  lspvqexp2.txt  lspvqexp3.txt  newamp1_energy_q.txt  newamp2_energy_q.txt  train_120_1.txt  train_120_2.txt
stm32/codebooks/: codebook.c  codebookd.c  codebookge.c  codebookjmv.c  codebooknewamp1.c  codebooknewamp1_energy.c  codebooknewamp2.c  codebooknewamp2_energy.c
stm32/inc/: memtools.h
stm32/src/: memtools.c
stm32/zephyr_inc/: memtools.h
zephyr/: CMakeLists.txt  Kconfig  module.yml
